Improved class names on work page

--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
                     live, five day weather forecast.
                   </p>
                   <br />
+                  <br />
                   <div>
                     <a
                       href="https://weather-app-ljf.netlify.app/"
                       target="_blank"
-                      class="project-link"
+                      class="project-button"
                       title="Weather Forecast App"
                       >Weather Forecast</a
                     >
@@ -181,18 +182,18 @@
                 <div class="project-description d-flex flex-column">
                   <h2>AI Poem Generator</h2>
                   <p class="mb-4">
-                    The mission was to create an interactive text generator
-                    using Axios and API integration. Featuring animations
-                    powered by a JavaScript plugin and the CSS @keyframes rule,
-                    this app was fun to build and a great opportunity to
-                    experiment with creative coding techniques.
+                    The mission: create an interactive text generator using
+                    Axios and API integration. Featuring animations powered by a
+                    JavaScript plugin and the CSS @keyframes rule, this app was
+                    a fun build and an opportunity to experiment with creative
+                    coding techniques.
                   </p>
                   <br />
                   <div>
                     <a
                       href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
                       target="_blank"
-                      class="project-link"
+                      class="project-button"
                       title="AI Poem Generator"
                       >AI poem for you</a
                     >
@@ -223,7 +224,7 @@
                     <a
                       href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
                       target="_blank"
-                      class="project-link"
+                      class="project-button"
                       title="Pole Dance Project"
                       >passion project</a
                     >
@@ -248,7 +249,7 @@
               lj.fryer.001@gmail.com</a
             >
           </div>
-          <div class="d-flex slide-links">
+          <div class="d-flex project-links">
             <a href="https://github.com/" title="my github" target="_blank">
               <img
                 src="/logos/github-icon-light.png"
