--- a/work.html
+++ b/work.html
@@ -109,15 +109,17 @@
           </div>
         </nav>
       </header>
-      <main class="mt-3">
-        <h1 class="text-center"><i class="fa-regular fa-file"></i> My Work</h1>
-        <h4 class="text-center p-2 mt-1 mb-3">Check out my projects</h4>
-        <div>
-          <div class="text-center mb-4">
-            <i class="fa-solid fa-chevron-down down-icon"></i>
+      <main class="work-wrapper mt-3">
+        <div class="work-title-box text-center">
+          <h1><i class="fa-regular fa-file"></i> My Work</h1>
+          <h4 class="p-2 mt-1 mb-3">Check out my projects</h4>
+          <div>
+            <div class="mb-4">
+              <i class="fa-solid fa-chevron-down down-icon"></i>
+            </div>
           </div>
         </div>
-        <div class="my-work">
+        <div class="projects">
           <div class="row mb-4">
             <div class="col-lg-4">
               <div class="project-card">
@@ -135,9 +137,10 @@
                     extract data from the API and template literals to deliver a
                     live, five day weather forecast.
                     <br />
+                    <br />
                   </p>
 
-                  <div class="d-flex slide-links">
+                  <div class="d-flex project-links">
                     <a
                       href="https://weather-app-ljf.netlify.app/"
                       target="_blank"
@@ -145,7 +148,7 @@
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
-                        class="slide-logos"
+                        class="external-logos"
                     /></a>
                     <a
                       href="https://github.com/LJ-Fryer/weather-forecast-app"
@@ -155,7 +158,7 @@
                       <img
                         src="/logos/git-icon.png"
                         alt="GitHub Project Link"
-                        class="slide-logos"
+                        class="external-logos"
                     /></a>
                   </div>
                 </div>
@@ -171,14 +174,14 @@
                 <div class="project-description d-flex flex-column">
                   <h2>AI Poem Generator</h2>
                   <p class="mb-3">
-                    The mission was to create an interactive text generator
-                    using Axios and API integration. Featuring animations
-                    powered by a JavaScript plugin and the CSS @keyframes rule,
-                    this app was fun to build and a great opportunity to
-                    experiment with creative coding techniques.
+                    The mission: create an interactive text generator using
+                    Axios and API integration. Featuring animations powered by a
+                    JavaScript plugin and the CSS @keyframes rule, this app was
+                    a fun build and an opportunity to experiment with creative
+                    coding techniques.
                     <br />
                   </p>
-                  <div class="d-flex slide-links">
+                  <div class="d-flex project-links">
                     <a
                       href="https://poem-generator-ljf.netlify.app/"
                       target="_blank"
@@ -186,7 +189,7 @@
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
-                        class="slide-logos"
+                        class="external-logos"
                     /></a>
                     <a
                       href="https://github.com/LJ-Fryer/poem-generator"
@@ -196,7 +199,7 @@
                       <img
                         src="/logos/git-icon.png"
                         alt="GitHub Project Link"
-                        class="slide-logos"
+                        class="external-logos"
                     /></a>
                   </div>
                 </div>
@@ -219,7 +222,7 @@
                     Click the image to switch to the dark theme.
                     <br />
                   </p>
-                  <div class="d-flex slide-links">
+                  <div class="d-flex project-links">
                     <a
                       href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*19d9rv4*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
                       target="_blank"
@@ -227,7 +230,7 @@
                       ><img
                         src="/logos/shecodes-icon.png"
                         alt="Netlify Project Link"
-                        class="slide-logos shecodes-logo"
+                        class="external-logos shecodes-logo"
                     /></a>
                   </div>
                 </div>
@@ -252,7 +255,7 @@
                     functional world clock experience.
                     <br />
                   </p>
-                  <div class="d-flex slide-links">
+                  <div class="d-flex project-links">
                     <a
                       href="https://worldclock-lj.netlify.app/"
                       target="_blank"
@@ -260,7 +263,7 @@
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
-                        class="slide-logos"
+                        class="external-logos"
                     /></a>
                     <a
                       href="https://github.com/LJ-Fryer/world-clock"
@@ -270,7 +273,7 @@
                       <img
                         src="/logos/git-icon.png"
                         alt="GitHub Project Link"
-                        class="slide-logos"
+                        class="external-logos"
                     /></a>
                   </div>
                 </div>
@@ -293,7 +296,7 @@
                     via a JavaScript plugin and CSS @keyframes rule.
                     <br />
                   </p>
-                  <div class="d-flex slide-links">
+                  <div class="d-flex project-links">
                     <a
                       href="https://codesandbox.io/p/sandbox/joke-generator-challenge-forked-myf4tq?file=%2Fsrc%2Fstyles.css%3A30%2C28&workspaceId=eec32aa4-2965-4330-89d8-97489a9961f9"
                       target="_blank"
@@ -301,7 +304,7 @@
                       ><img
                         src="/logos/code-sandbox.png"
                         alt="CodeSandbox Project Link"
-                        class="img-fluid slide-logos"
+                        class="img-fluid external-logos"
                     /></a>
                     <br />
                   </div>
@@ -335,7 +338,7 @@
                       <img
                         src="/logos/shecodes-icon.png"
                         alt="SheCodes Project Link"
-                        class="img-fluid slide-logos"
+                        class="img-fluid external-logos"
                       />
                     </a>
                     <br />
@@ -360,7 +363,7 @@
               lj.fryer.001@gmail.com</a
             >
           </div>
-          <div class="d-flex slide-links">
+          <div class="d-flex project-links">
             <a href="https://github.com/" title="my github" target="_blank">
               <img
                 src="/logos/github-icon-light.png"
