--- a/about.html
+++ b/about.html
@@ -336,7 +336,7 @@
               lj.fryer.001@gmail.com</a
             >
           </div>
-          <div class="d-flex slide-links">
+          <div class="d-flex project-links">
             <a href="https://github.com/" title="my github" target="_blank">
               <img
                 src="/logos/github-icon-light.png"
