--- a/contact.html
+++ b/contact.html
@@ -128,11 +128,11 @@
                 <img
                   src="/logos/shecodes-logo.png"
                   alt="SheCodes"
-                  class="img-fluid slide-logos"
+                  class="img-fluid external-logos"
                 />
               </a>
               <a href="https://github.com/" title="My GitHub"
-                ><img src="/logos/github-icon.svg" alt="GitHub" class="img-fluid slide-logos"></i
+                ><img src="/logos/github-icon.svg" alt="GitHub" class="img-fluid external-logos"></i
               ></a>
               <a
                 href="https://app.netlify.com/teams/lj-fryer/sites"
@@ -141,7 +141,7 @@
                 <img
                   src="/logos/netlify-logo-lightmode.png"
                   alt="My Netlify"
-                  class="img-fluid slide-logos"
+                  class="img-fluid external-logos"
                 />
               </a>
             </div>         
@@ -161,7 +161,7 @@
               > lj.fryer.001@gmail.com</a
             >
           </div>
-          <div class="d-flex slide-links">
+          <div class="d-flex project-links">
             <a href="https://github.com/" title="my github" target="_blank">
               <img
                 src="/logos/github-icon-light.png"
