Improved class names on contact and about pages

--- a/about.html
+++ b/about.html
@@ -110,17 +110,17 @@
         </nav>
       </header>
       <main>
-        <div class="about-me-inner d-flex">
+        <div class="about-inner d-flex">
           <img
             src="/images/trapeze-image.png"
             alt="LJ Fryer hanging from trapeze"
-            class="img-fluid about-me-image"
+            class="img-fluid about-image"
           />
-          <div class="about-me-text d-flex flex-column justify-content-center">
+          <div class="about-text d-flex flex-column justify-content-center">
             <div>
               <h1>ABOUT ME</h1>
             </div>
-            <div class="about-me-paragraph">
+            <div class="about-paragraph">
               <p>
                 When I’m not finding new ways to be upside down or fangirling
                 over animals, you’ll catch me nerding out over puzzles (looking
@@ -166,7 +166,7 @@
           </h2>
         </div>
 
-        <div class="skills-container" id="toolkit">
+        <div class="about-toolkit-box" id="toolkit">
           <div class="toolkit">
             <div class="row">
               <div class="col-4 col-md-2">
@@ -367,7 +367,7 @@
             </a>
           </div>
         </div>
-        <p class="text-center footer-paragraph mt-5">
+        <p class="text-center footer-paragraph mt-3">
           Website designed and coded by LJ Fryer.
           <a
             href="https://github.com/LJ-Fryer/portfolio-project-ljf"
