Improved footer spacing

--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
           </div>
         </div>
       </main>
-      <footer class="mt-5 mb-5">
+      <footer class="mt-5">
         <div class="footer-inner d-flex justify-content-between">
           <div class="footer-email-box align-self-center d-flex">
             <a href="mailto:lj.fryer.001@gmail.com" title="email me"
