--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
             <p class="hello-text">hello</p>
           </div>
           <div class="contact-section d-flex flex-column text-center align-self-center">
-            <h1 class="contact-heading text-center">say hi</h1>
+            <h1 class="contact-heading">say hi</h1>
             <div class="personal-links d-flex justify-content-center">
               <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
                 ><i class="fa-solid fa-envelope"></i
@@ -117,9 +117,9 @@
               ></a>
             </div>
 
-            <div class="text-center mt-5">
+            <div class="mt-5">
                 <h4>my code</h4>
-                <div class="text-center mb-2">
+                <div class="mb-2">
                     <i class="fa-solid fa-chevron-down down-icon down-pointer"></i>
                 </div>
             </div>
