Added anchor links for page navigation

--- a/about.html
+++ b/about.html
@@ -122,10 +122,13 @@
             </div>
             <div class="about-paragraph">
               <p>
-                When I’m not finding new ways to be upside down or fangirling
-                over animals, you’ll catch me nerding out over puzzles (looking
-                at you, NYT’s games), binging true crime and science podcasts,
-                or perfecting my latest coding project.
+                When I’m not finding new ways to be upside down or fan-girling
+                over animals (see
+                <a href="/about.html#scroll-pictures" title="scroll to photos">
+                  below</a
+                >), you’ll catch me nerding out over puzzles (looking at you,
+                NYT’s games), binging true crime and science podcasts, or
+                perfecting my latest coding project.
               </p>
               <p>
                 My favourite city (and former home) is Tokyo, where the iconic
@@ -148,7 +151,7 @@
         </div>
 
         <div class="winky-face">
-          <div class="personal-links mb-5 d-flex justify-content-center">
+          <div class="about-links mb-5 d-flex justify-content-center">
             <a href="/work.html" title="My Projects">
               <i class="fa-regular fa-file"></i
             ></a>
@@ -156,17 +159,18 @@
               ><i class="fa-regular fa-envelope"></i
             ></a>
           </div>
-          <div class="text-center mb-3">
-            <i class="fa-solid fa-chevron-down down-icon"></i>
+          <div class="text-center mb-5">
+            <a href="/about.html#toolkit" title="scroll down"
+              ><i class="fa-solid fa-chevron-down down-icon"></i
+            ></a>
           </div>
-          <br />
-          <br />
-          <h2 class="toolkit-title text-center mb-5">
+
+          <h2 class="toolkit-title text-center mb-5" id="toolkit">
             My Toolkit <i class="fa-solid fa-laptop"></i>
           </h2>
         </div>
 
-        <div class="about-toolkit-box" id="toolkit">
+        <div class="about-toolkit-box">
           <div class="toolkit">
             <div class="row">
               <div class="col-4 col-md-2">
@@ -320,6 +324,31 @@
               </div>
             </div>
           </div>
+        </div>
+        <div
+          class="d-flex mt-5 mb-5 justify-content-center about-hobby-images"
+          id="scroll-pictures"
+        >
+          <img
+            src="/images/lj-pole-img.png"
+            alt="Pole Dance"
+            class="img-fluid hobby-image-4-3 lj-pole-image"
+          />
+          <img
+            src="/images/lj-skydive-img.png"
+            alt="Indoor Skydiving"
+            class="img-fluid hobby-image-3-4 align-self-end"
+          />
+          <img
+            src="/images/lj-giraffe-img.png"
+            alt="Giraffes at Taronga Zoo"
+            class="img-fluid hobby-image-3-4 align-self-end"
+          />
+          <img
+            src="/images/lj-butterfly-img.png"
+            alt="A butterly resting on my hand"
+            class="img-fluid hobby-image-4-3"
+          />
         </div>
       </main>
       <footer class="mt-5">
