--- a/index.html
+++ b/index.html
@@ -138,7 +138,14 @@
             />
           </div>
         </div>
-        <h3 class="text-center p-2 mt-3 mb-3">A sample of my projects</h3>
+        <div class="text-center">
+          <a href="/index.html#projects"
+            ><i class="fa-solid fa-chevron-down down-icon"></i
+          ></a>
+        </div>
+        <h3 class="text-center p-2 mt-3 mb-3" id="projects">
+          A sample of my projects
+        </h3>
         <div class="projects">
           <div class="row">
             <div class="col-lg-4">
