--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     ></script>
     <script src="/src/index.js"></script>
   </head>
-  <body>
+  <body class="mb-3">
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-lg bg-primary-color">
