--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     ></script>
     <script src="/src/index.js"></script>
   </head>
-  <body class="mb-5">
+  <body class="mb-3">
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-lg bg-primary-color">
@@ -117,7 +117,7 @@
               ></a>
             </div>
 
-            <div class="mt-5">
+            <div class="contact-links">
                 <h4>my code</h4>
                 <div class="mb-2">
                     <i class="fa-solid fa-chevron-down down-icon down-pointer"></i>
