--- a/work.html
+++ b/work.html
@@ -46,7 +46,7 @@
     ></script>
     <script src="/src/index.js"></script>
   </head>
-  <body class="mb-5">
+  <body class="mb-3">
     <div class="container">
       <header>
         <nav class="navbar navbar-expand-lg bg-primary-color">
@@ -115,7 +115,9 @@
           <h4 class="p-2 mt-1 mb-3">Check out my projects</h4>
           <div>
             <div class="mb-4">
-              <i class="fa-solid fa-chevron-down down-icon"></i>
+              <a href="/work.html#scroll-work" title="scroll down">
+                <i class="fa-solid fa-chevron-down down-icon"></i>
+              </a>
             </div>
           </div>
         </div>
@@ -239,7 +241,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4">
-              <div class="project-card">
+              <div class="project-card" id="scroll-work">
                 <img
                   src="/images/world-clock-image.png"
                   class="project-image img-fluid"
