Amended page titles

--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
       name="description"
       content="Front-end developer LJ Fryer's projects. Links to Netlify, GitHub, SheCodes, CodeSandbox."
     />
-    <title>My Work LJ Fryer lj-fryer.netlify.app/</title>
+    <title>My Work LJ Fryer | lj-fryer.netlify.app/</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
