--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contact Front-end developer LJ Fryer. Find my email, Instagram, LinkedIn, GitHub, Netlify and SheCodes profile.">
-    <title>Contact LJ Fryer lj-fryer.netlify.app/</title>
+    <title>Contact LJ Fryer | lj-fryer.netlify.app/</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
