--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       name="description"
       content="LJ fryer is a front-end developer based in Sydney. A little background on me and a sample of my projects."
     />
-    <title>LJ Fryer Front-end Developer lj-fryer.netlify.app/</title>
+    <title>LJ Fryer Front-end Developer | lj-fryer.netlify.app/</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -211,12 +211,15 @@
             </div>
             <div class="col-lg-4">
               <div class="project-card">
-                <img
-                  src="/images/pole-page-img.png"
-                  class="project-image pole-page-light img-fluid"
-                  id="pole-page-light"
-                  alt="Pole dance project"
-                />
+                <button class="change-theme" id="change-theme">
+                  <img
+                    src="/images/pole-page-img.png"
+                    class="project-image pole-page-light img-fluid"
+                    id="pole-page-light"
+                    alt="Pole dance project"
+                  />
+                </button>
+
                 <div class="project-description d-flex flex-column">
                   <h2>Pole Dance Project</h2>
                   <p class="mb-4">
