--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
               <img
                 src="/logos/ljf-logo.png"
                 alt="lj fryer logo"
-                class="ljf-logo"
+                class="img-fluid ljf-logo"
               />
             </a>
             <button
@@ -77,7 +77,7 @@
                     aria-current="page"
                     href="/"
                     title="Homepage"
-                    ><i class="fa-solid fa-house fs-5"></i
+                    ><i class="fa-solid fa-house img-fluid fs-5"></i
                   ></a>
                 </li>
                 <li class="nav-item">
@@ -85,7 +85,7 @@
                     class="nav-link text-light"
                     href="/about.html"
                     title="About LJ Fryer"
-                    ><i class="fa-solid fa-circle-info fs-5"></i
+                    ><i class="fa-solid fa-circle-info img-fluid fs-5"></i
                   ></a>
                 </li>
                 <li class="nav-item">
@@ -93,7 +93,7 @@
                     class="nav-link text-light active"
                     href="/work.html"
                     title="LJ Fryer's work"
-                    ><i class="fa-solid fa-folder-open fs-5"></i
+                    ><i class="fa-solid fa-folder-open img-fluid fs-5"></i
                   ></a>
                 </li>
                 <li class="nav-item">
@@ -101,7 +101,7 @@
                     class="nav-link text-light"
                     href="/contact.html"
                     title="Contact LJ Fryer"
-                    ><i class="fa-regular fa-comments fs-5"></i
+                    ><i class="fa-regular fa-comments img-fluid fs-5"></i
                   ></a>
                 </li>
               </ul>
@@ -111,12 +111,12 @@
       </header>
       <main class="work-wrapper mt-3">
         <div class="work-title-box text-center">
-          <h1><i class="fa-regular fa-file"></i> My Work</h1>
+          <h1><i class="fa-regular fa-file img-fluid"></i> My Work</h1>
           <h4 class="p-2 mt-1 mb-3">Check out my projects</h4>
           <div>
             <div class="mb-4">
               <a href="/work.html#scroll-work" title="scroll down">
-                <i class="fa-solid fa-chevron-down down-icon"></i>
+                <i class="fa-solid fa-chevron-down img-fluid down-icon"></i>
               </a>
             </div>
           </div>
@@ -127,7 +127,7 @@
               <div class="project-card">
                 <img
                   src="/images/weather-app-img.png"
-                  class="project-image img-fluid"
+                  class="img-fluid project-image"
                   alt="LJ Fryer Weather App"
                 />
                 <div class="project-description d-flex flex-column">
@@ -150,7 +150,7 @@
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
-                        class="external-logos"
+                        class="img-fluid external-logos"
                     /></a>
                     <a
                       href="https://github.com/LJ-Fryer/weather-forecast-app"
@@ -160,7 +160,7 @@
                       <img
                         src="/logos/git-icon.png"
                         alt="GitHub Project Link"
-                        class="external-logos"
+                        class="img-fluid external-logos"
                     /></a>
                   </div>
                 </div>
@@ -170,7 +170,7 @@
               <div class="project-card">
                 <img
                   src="/images/ai-poem-generator-img.png"
-                  class="project-image img-fluid"
+                  class="img-fluid project-image"
                   alt="LJ Fryer Weather App"
                 />
                 <div class="project-description d-flex flex-column">
@@ -191,7 +191,7 @@
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
-                        class="external-logos"
+                        class="img-fluid external-logos"
                     /></a>
                     <a
                       href="https://github.com/LJ-Fryer/poem-generator"
@@ -201,7 +201,7 @@
                       <img
                         src="/logos/git-icon.png"
                         alt="GitHub Project Link"
-                        class="external-logos"
+                        class="img-fluid external-logos"
                     /></a>
                   </div>
                 </div>
@@ -211,7 +211,7 @@
               <div class="project-card">
                 <img
                   src="/images/pole-page-dark-image.png"
-                  class="project-image img-fluid"
+                  class="img-fluid project-image"
                   alt="Pole dance project"
                 />
                 <div class="project-description d-flex flex-column">
@@ -232,7 +232,7 @@
                       ><img
                         src="/logos/shecodes-icon.png"
                         alt="Netlify Project Link"
-                        class="external-logos shecodes-logo"
+                        class="img-fluid external-logos shecodes-logo"
                     /></a>
                   </div>
                 </div>
@@ -244,7 +244,7 @@
               <div class="project-card" id="scroll-work">
                 <img
                   src="/images/world-clock-image.png"
-                  class="project-image img-fluid"
+                  class="img-fluid project-image"
                   alt="LJ Fryer World Clock App"
                 />
                 <div class="project-description d-flex flex-column">
@@ -265,7 +265,7 @@
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
-                        class="external-logos"
+                        class="img-fluid external-logos"
                     /></a>
                     <a
                       href="https://github.com/LJ-Fryer/world-clock"
@@ -275,7 +275,7 @@
                       <img
                         src="/logos/git-icon.png"
                         alt="GitHub Project Link"
-                        class="external-logos"
+                        class="img-fluid external-logos"
                     /></a>
                   </div>
                 </div>
@@ -285,7 +285,7 @@
               <div class="project-card">
                 <img
                   src="/images/ai-joke-generator.png"
-                  class="project-image img-fluid"
+                  class="img-fluid project-image"
                   alt="LJ Fryer Weather App"
                 />
                 <div class="project-description d-flex flex-column">
@@ -317,7 +317,7 @@
               <div class="project-card">
                 <img
                   src="/images/lucky-project-image.png"
-                  class="project-image img-fluid"
+                  class="img-fluid project-image"
                   alt="Pole dance project"
                 />
                 <div class="project-description d-flex flex-column">
@@ -355,7 +355,7 @@
         <div class="footer-inner d-flex justify-content-between">
           <div class="footer-email-box align-self-center d-flex">
             <a href="mailto:lj.fryer.001@gmail.com" title="email me"
-              ><i class="fa-solid fa-envelope footer-email-icon"></i
+              ><i class="fa-solid fa-envelope img-fluid footer-email-icon"></i
             ></a>
             <a
               href="mailto:lj.fryer.001@gmail.com"
@@ -390,7 +390,7 @@
               target="_blank"
             >
               <i
-                class="fa-brands fa-linkedin img-fluid linkedin-logo"
+                class="img-fluid fa-brands fa-linkedin linkedin-logo"
                 alt="LinkedIn"
               ></i>
             </a>
