Added images and latest projects to homepage and work page

--- a/index.html
+++ b/index.html
@@ -147,97 +147,133 @@
           A sample of my projects
         </h3>
         <div class="projects">
-          <div class="row">
+          <div class="row mb-4">
             <div class="col-lg-4">
               <div class="project-card">
                 <img
-                  src="/images/weather-project-slide.png"
-                  class="project-image img-fluid"
-                  alt="LJ Fryer Weather App"
+                  src="/images/forecast-project-slide.png"
+                  class="img-fluid project-image"
+                  alt="5 Day Forecast"
                 />
                 <div class="project-description d-flex flex-column">
-                  <h2>Weather Project</h2>
+                  <h2>5 Day Forecast</h2>
                   <p class="mb-4">
-                    With my first interactive application, I added GitHub,
-                    hosting and API integration to my developer toolbox. This
-                    app employs ES6, integrating a search engine, functions to
-                    extract data from the API and template literals to deliver a
-                    live, five day weather forecast.
-                  </p>
-                  <br />
-                  <br />
-                  <div>
-                    <a
-                      href="https://weather-app-ljf.netlify.app/"
-                      target="_blank"
-                      class="project-button"
-                      title="Weather Forecast App"
-                      >Weather Forecast</a
-                    >
+                    Bringing weather predictions and React magic together! This
+                    sleek, responsive app delivers a five-day forecast faster
+                    than you can say "partly cloudy with a chance of code."
+                    Powered by React, APIs, and a sprinkle of CSS, it's the
+                    perfect mix of functionality and flair - no umbrella
+                    required!
                     <br />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="project-card">
-                <img
-                  src="/images/ai-poem-project-slide.png"
-                  class="project-image img-fluid"
-                  alt="LJ Fryer Weather App"
-                />
-                <div class="project-description d-flex flex-column">
-                  <h2>AI Poem Generator</h2>
-                  <p class="mb-4">
-                    The mission: create an interactive text generator using
-                    Axios and API integration. Featuring animations powered by a
-                    JavaScript plugin and the CSS @keyframes rule, this app was
-                    a fun build and an opportunity to experiment with creative
-                    coding techniques.
-                  </p>
-                  <br />
-                  <div>
-                    <a
-                      href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
-                      target="_blank"
-                      class="project-button"
-                      title="AI Poem Generator"
-                      >AI poem for you</a
-                    >
                     <br />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="project-card">
-                <button class="change-theme" id="change-theme">
-                  <img
-                    src="/images/pole-project-light-slide.png"
-                    class="project-image pole-page-light img-fluid"
-                    id="pole-page-light"
-                    alt="Pole dance project"
-                  />
-                </button>
+                  </p>
 
-                <div class="project-description d-flex flex-column">
-                  <h2>Pole Dance Project</h2>
-                  <p class="mb-4">
-                    Using VS Code, I built an HTML landing page featuring CSS
-                    grids, transform properties, and a linear gradient.
-                    JavaScript class manipulation allowed me to implement a
-                    light/dark theme toggle, adding interactivity to the page.
-                  </p>
-                  <br />
-                  <br />
-                  <div>
+                  <div class="d-flex project-links">
                     <a
-                      href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                      href="https://ljf-weather-app.netlify.app/"
                       target="_blank"
-                      class="project-button"
-                      title="Pole Dance Project"
-                      >passion project</a
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/react-weather-app"
+                      target="_blank"
+                      title="GitHub Link"
                     >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="project-card">
+                <img
+                  src="/images/dictionary-project-slide.png"
+                  class="img-fluid project-image"
+                  alt="Vocabulator"
+                />
+                <div class="project-description d-flex flex-column">
+                  <h2>Dictionary</h2>
+                  <p class="mb-3">
+                    Because words are hard... sometimes. This React-powered
+                    dictionary app fetches definitions faster than you can say
+                    “sesquipedalian.” With two APIs working behind the scenes,
+                    it’s both brainy and efficient—like a pocket-sized
+                    linguistics wizard. Big words, smooth UI, and a sprinkle of
+                    React magic—what’s not to love?
+                    <br />
+                    <br />
+                  </p>
+                  <div class="d-flex project-links">
+                    <a
+                      href="https://vocabulator.netlify.app/"
+                      target="_blank"
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/dictionary-project"
+                      target="_blank"
+                      title="GitHub Link"
+                    >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="project-card">
+                <img
+                  src="/images/ashtanga-project-slide.png"
+                  class="img-fluid project-image"
+                  alt="Ashtanga Landing Page"
+                />
+                <div class="project-description d-flex flex-column">
+                  <h2>Ashtanga Landing Page</h2>
+                  <p class="mb-3">
+                    Yoga meets pixels in this sleek, responsive Ashtanga Yoga
+                    site! Built with love (and advanced CSS), it gracefully
+                    flows across screens like a perfect Vinyasa. From smooth
+                    layouts to interactive features, this project flexes my
+                    front-end skills while keeping things Zen. No yoga mat
+                    required—just a love for clean code!
+                    <br />
+                    <br />
+                  </p>
+                  <div class="d-flex project-links">
+                    <a
+                      href="https://ashtanga-yoga.netlify.app/"
+                      target="_blank"
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/ashtanga-project"
+                      target="_blank"
+                      title="GitHub Link"
+                    >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
                   </div>
                 </div>
               </div>
