--- a/work.html
+++ b/work.html
@@ -126,6 +126,138 @@
             <div class="col-lg-4">
               <div class="project-card">
                 <img
+                  src="/images/forecast-project-slide.png"
+                  class="img-fluid project-image"
+                  alt="5 Day Forecast"
+                />
+                <div class="project-description d-flex flex-column">
+                  <h2>5 Day Forecast</h2>
+                  <p class="mb-4">
+                    Bringing weather predictions and React magic together! This
+                    sleek, responsive app delivers a five-day forecast faster
+                    than you can say "partly cloudy with a chance of code."
+                    Powered by React, APIs, and a sprinkle of CSS, it's the
+                    perfect mix of functionality and flair - no umbrella
+                    required!
+                    <br />
+                    <br />
+                  </p>
+
+                  <div class="d-flex project-links">
+                    <a
+                      href="https://ljf-weather-app.netlify.app/"
+                      target="_blank"
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/react-weather-app"
+                      target="_blank"
+                      title="GitHub Link"
+                    >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="project-card">
+                <img
+                  src="/images/dictionary-project-slide.png"
+                  class="img-fluid project-image"
+                  alt="Vocabulator"
+                />
+                <div class="project-description d-flex flex-column">
+                  <h2>Dictionary</h2>
+                  <p class="mb-3">
+                    Because words are hard... sometimes. This React-powered
+                    dictionary app fetches definitions faster than you can say
+                    “sesquipedalian.” With two APIs working behind the scenes,
+                    it’s both brainy and efficient—like a pocket-sized
+                    linguistics wizard. Big words, smooth UI, and a sprinkle of
+                    React magic—what’s not to love?
+                    <br />
+                    <br />
+                  </p>
+                  <div class="d-flex project-links">
+                    <a
+                      href="https://vocabulator.netlify.app/"
+                      target="_blank"
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/dictionary-project"
+                      target="_blank"
+                      title="GitHub Link"
+                    >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="project-card">
+                <img
+                  src="/images/ashtanga-project-slide.png"
+                  class="img-fluid project-image"
+                  alt="Ashtanga Landing Page"
+                />
+                <div class="project-description d-flex flex-column">
+                  <h2>Ashtanga Landing Page</h2>
+                  <p class="mb-3">
+                    Yoga meets pixels in this sleek, responsive Ashtanga Yoga
+                    site! Built with love (and advanced CSS), it gracefully
+                    flows across screens like a perfect Vinyasa. From smooth
+                    layouts to interactive features, this project flexes my
+                    front-end skills while keeping things Zen. No yoga mat
+                    required—just a love for clean code!
+                    <br />
+                    <br />
+                  </p>
+                  <div class="d-flex project-links">
+                    <a
+                      href="https://ashtanga-yoga.netlify.app/"
+                      target="_blank"
+                      title="Launch Netlify Site"
+                      ><img
+                        src="/logos/netlify-logo-lightmode.png"
+                        alt="Netlify Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                    <a
+                      href="https://github.com/LJ-Fryer/ashtanga-project"
+                      target="_blank"
+                      title="GitHub Link"
+                    >
+                      <img
+                        src="/logos/git-icon.png"
+                        alt="GitHub Project Link"
+                        class="img-fluid external-logos"
+                    /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mb-4">
+            <div class="col-lg-4">
+              <div class="project-card">
+                <img
                   src="/images/weather-project-slide.png"
                   class="img-fluid project-image"
                   alt="LJ Fryer Weather App"
