Improved anchor links

--- a/work.html
+++ b/work.html
@@ -533,6 +533,7 @@
           <a
             href="https://github.com/LJ-Fryer/portfolio-project-ljf"
             title="Website Repository"
+            target="_blank"
           >
             Open-sourced
           </a>
