--- a/about.html
+++ b/about.html
@@ -401,6 +401,7 @@
           <a
             href="https://github.com/LJ-Fryer/portfolio-project-ljf"
             title="Website Repository"
+            target="_blank"
           >
             Open-sourced
           </a>
