--- a/contact.html
+++ b/contact.html
@@ -107,12 +107,12 @@
               <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
                 ><i class="fa-solid fa-envelope"></i
               ></a>
-              <a href="https://www.instagram.com/coding.yogi.7" title="Instagram"
+              <a href="https://www.instagram.com/coding.yogi.7" title="Instagram" target="_blank"
                 ><i class="fa-brands fa-square-instagram"></i
               ></a>
               <a
                 href="https://www.linkedin.com/in/linda-fryer-ba2294ba/"
-                title="My LinkedIn"
+                title="My LinkedIn" target="_blank"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
             </div>
@@ -124,19 +124,19 @@
                 </div>
             </div>
             <div class="coding-links d-flex mt-3 justify-content-center">
-              <a href="https://www.shecodes.io/graduates/128619-linda-fryer" title="SheCodes Profile">
+              <a href="https://www.shecodes.io/graduates/128619-linda-fryer" title="SheCodes Profile" target="_blank">
                 <img
                   src="/logos/shecodes-logo.png"
                   alt="SheCodes"
                   class="img-fluid external-logos"
                 />
               </a>
-              <a href="https://github.com/" title="My GitHub"
+              <a href="https://github.com/" title="My GitHub" target="_blank"
                 ><img src="/logos/github-icon.svg" alt="GitHub" class="img-fluid external-logos"></i
               ></a>
               <a
                 href="https://app.netlify.com/teams/lj-fryer/sites"
-                title="My Netlify"
+                title="My Netlify" target="_blank"
               >
                 <img
                   src="/logos/netlify-logo-lightmode.png"
@@ -197,6 +197,7 @@
           <a
             href="https://github.com/LJ-Fryer/portfolio-project-ljf"
             title="Website Repository"
+            target="_blank"
           >
             Open-sourced
           </a>
